--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: 'https://ninjagrandpa.github.io/Webbutveckling-Labb1/Index/index.html'
+          path: '-'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
